--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -88,6 +88,7 @@ text-splitter = "0.25.1"
 lopdf = "0.36.0"
 extractous = "0.3.0"
 whatlang = "0.16.0" # For language detection
+dotext = "0.1.0" # For .docx and other document text extraction
 
 [features]
 # By default Tauri runs in production mode
